--- a/src/app/items/filters/maximum-year-filter/maximum-year-filter.component.html
+++ b/src/app/items/filters/maximum-year-filter/maximum-year-filter.component.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <input class="from-control" [(ngModel)]="this.maximumYearFilterValue" (ngModelChange)="updateValue()" type="text" name="maximumYearFilterValue"
+  <input class="from-control" appFormYearValidation #tbMaxYear (change)="updateValidation(tbMaxYear.value)" [(ngModel)]="this.maximumYearFilterValue" (ngModelChange)="updateValue()" type="text" name="maximumYearFilterValue"
     placeholder="Maximum Year">
 </div>
