--- a/src/app/items/filters/minimum-price-filter/minimum-price-filter.component.html
+++ b/src/app/items/filters/minimum-price-filter/minimum-price-filter.component.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <input class="from-control" [(ngModel)]="this.minimumPriceFilterValue" (ngModelChange)="updateValue()" type="text" name="minimumPriceFilterValue"
+  <input class="from-control" appFormPriceValidation #tbMinPrice (change)="validationUpdate(tbMinPrice.value)" [(ngModel)]="this.minimumPriceFilterValue" (ngModelChange)="updateValue()" type="text" name="minimumPriceFilterValue"
     placeholder="Minimum Price">
 </div>
