--- a/src/app/items/filters/make-filter/make-filter.component.html
+++ b/src/app/items/filters/make-filter/make-filter.component.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <input class="from-control" [(ngModel)]="this.makeFilterValue" (ngModelChange)="updateValue()" type="text" name="makeFilterValue"
-    placeholder="Make Filter">
+  <input class="from-control" appFormStringLengthValidation #tbMakeFilter (change)="updateValidation(tbMakeFilter.value)" [(ngModel)]="this.makeFilterValue"
+    (ngModelChange)="updateValue()" type="text" name="makeFilterValue" placeholder="Make Filter">
 </div>
