--- a/src/app/statistics/statistics-main.component.html
+++ b/src/app/statistics/statistics-main.component.html
@@ -1,24 +1,24 @@
-<h2>Statistics</h2>
+<h2>Statistics (Top 10)</h2>
 <ul>
     <li>
-        <a routerLink="/statistics/items/mostCommentedItems">Top 10 most commented cars</a>
+        <a routerLink="/statistics/items/mostCommentedItems">Most commented cars</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostExpensiveItems">Top 10 most expensive cars</a>
+        <a routerLink="/statistics/items/mostExpensiveItems">Most expensive cars</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostOfferedItems">Top 10 most offered cars</a>
+        <a routerLink="/statistics/items/mostOfferedItems">Most offered cars</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostSalledMakes">Top 10 most selled makes</a>
+        <a routerLink="/statistics/items/mostSalledMakes">Most selled makes</a>
     </li>
     <li>
-        <a routerLink="/statistics/users/topActiveUsers">Top 10 active users</a>
+        <a routerLink="/statistics/users/topActiveUsers">Active users</a>
     </li>
     <li>
-        <a routerLink="/statistics/users/topBuyers">Top 10 buyers</a>
+        <a routerLink="/statistics/users/topBuyers">Buyers</a>
     </li>
     <li>
-        <a routerLink="/statistics/users/topSellers">Top 10 sellers</a>
+        <a routerLink="/statistics/users/topSellers">Sellers</a>
     </li>
 </ul>
