--- a/src/app/statistics/statistics-main.component.html
+++ b/src/app/statistics/statistics-main.component.html
@@ -1,24 +1,26 @@
-<h2>Statistics (Top 10)</h2>
-<ul>
+<div class="statistics-wrapper">
+  <h3 id="component-header">Statistics (Top 10)</h3>
+  <ul>
     <li>
-        <a routerLink="/statistics/items/mostCommentedItems">Most commented cars</a>
+      <a routerLink="/statistics/items/mostCommentedItems">Most commented cars</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostExpensiveItems">Most expensive cars</a>
+      <a routerLink="/statistics/items/mostExpensiveItems">Most expensive cars</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostOfferedItems">Most offered cars</a>
+      <a routerLink="/statistics/items/mostOfferedItems">Most offered cars</a>
+    </li>
+    <!-- <li>
+      <a routerLink="/statistics/items/mostSalledMakes">Most selled makes</a>
     </li>
     <li>
-        <a routerLink="/statistics/items/mostSalledMakes">Most selled makes</a>
+      <a routerLink="/statistics/users/topActiveUsers">Active users</a>
     </li>
     <li>
-        <a routerLink="/statistics/users/topActiveUsers">Active users</a>
+      <a routerLink="/statistics/users/topBuyers">Buyers</a>
     </li>
     <li>
-        <a routerLink="/statistics/users/topBuyers">Buyers</a>
-    </li>
-    <li>
-        <a routerLink="/statistics/users/topSellers">Sellers</a>
-    </li>
-</ul>
+      <a routerLink="/statistics/users/topSellers">Sellers</a>
+    </li> -->
+  </ul>
+</div>
