--- a/src/app/statistics/user-statistics/top-buyers.component.html
+++ b/src/app/statistics/user-statistics/top-buyers.component.html
@@ -1,2 +1,2 @@
-<h2>Top 10 buyers</h2>
+<h3 id="component-header">Top 10 buyers</h3>
 <app-statistics-list [mylist]="this.list"></app-statistics-list>
