--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,13 +1,13 @@
 <h3 id="component-header">Contact Us</h3>
 <div class="contact-wrapper">
   <div class="form-wrapper form-group">
-    <input type="text" class="form-group" placeholder="Name" [(ngModel)]="mail.senderName">
+    <input type="text" class="form-group" placeholder="Name" [(ngModel)]="mail.senderName" required minlength="2" maxlength="30" pattern="[a-zA-Z]*">
     <br>
-    <input type="email" class="form-group" placeholder="Email Address" [(ngModel)]="mail.senderEmail">
+    <input type="email" class="form-group" placeholder="Email Address" [(ngModel)]="mail.senderEmail" required>
     <br>
-    <input type="text" class="form-group" placeholder="Subject" [(ngModel)]="mail.subject">
+    <input type="text" class="form-group" placeholder="Subject" [(ngModel)]="mail.subject" required minlength="4" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
     <br>
-    <textarea name="content" id="content" [(ngModel)]="mail.content"></textarea>
+    <textarea name="content" id="content" [(ngModel)]="mail.content" required minlength="50" maxlength="1000"></textarea>
     <br>
     <button class="btn btn-primary" (click)="onSubmit()">Send</button>
   </div>
