--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -15,11 +15,28 @@ div.contact-wrapper {
   }
   input {
     width: 100%;
+    padding: 5px;
+    color: white;
+    background-color: #2f2f2f;
+    &.ng-valid.ng-touched {
+      border-color: #55b559;
+    }
+    &.ng-invalid.ng-touched {
+      border-color: #F55145;
+    }
   }
   #content {
     resize: none;
-    padding: 10px 15px;
+    padding: 10px;
     width: 100%;
     height: 20em;
+    color: white;
+    background-color: #2f2f2f;
+    &.ng-valid.ng-touched {
+      border-color: #55b559;
+    }
+    &.ng-invalid.ng-touched {
+      border-color: #F55145;
+    }
   }
 }
