--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -16,6 +16,8 @@ div.contact-wrapper {
   input {
     width: 100%;
     padding: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     &.ng-valid.ng-touched {
       border-color: #55b559;
     }
@@ -28,11 +30,14 @@ div.contact-wrapper {
     padding: 10px;
     width: 100%;
     height: 20em;
-    &.ng-valid.ng-touched {
-      border-color: #55b559;
-    }
-    &.ng-invalid.ng-touched {
-      border-color: #F55145;
-    }
+  }
+  .invalid-input-msg {
+    padding: 10px 7.5px;
+    font-size: 1.2rem;
+    color: #FFFEFE;
+    margin-top: -15px;
+    background-color: #F55145;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
 }
